Use aws cli instead of s3cmd

--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,4 @@ deployment:
   s3:
     branch: master
     commands:
-      - s3cmd sync * s3://codiustest.net/
+      - aws s3 sync * s3://codiustest.net/
